fixed size of auth modals on smaller screens

--- a/FRONTEND/src/components/AuthCards/auth.css
+++ b/FRONTEND/src/components/AuthCards/auth.css
@@ -40,7 +40,7 @@
     font-size: 36px;
     line-height: 45px;
     color: #FFB45F;
-    margin: 0 0 50px 0;
+    margin: 0 0 30px 0;
 }
 
 .auth-card-content {
@@ -74,6 +74,7 @@
     line-height: 30px;
     color: #3A3A3A;
     background: none;
+    padding: 0;
     margin: 0 0 20px 0;
     border: none;
     border-bottom: 2px solid #B9B9B9;
@@ -171,8 +172,12 @@
     .auth-card {
         width: 100vw;
     }
+    .auth-field-heading, .auth-input-field {
+        font-size: 20px;
+    }
     .auth-card-heading {
         font-size: 30px;
+        margin: 0 0 20px 0;
         line-height: normal;
         text-align: center;
         align-items: center;
